# photographer-data-analysis

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
R_visualization/: 1_photographer_behavioral_analysis.Rmd  1_photographer_behavioral_analysis.md  1_photographer_behavioral_analysis.nb.html  2_photographer_second_level_RSA_visualization.Rmd  2_photographer_second_level_RSA_visualization.md
first-level/: __main__.py
first-level/behavior/: behavioral_data.py
first-level/cli/: run.py
first-level/glm/: confound.py  glm_block_wise.py  glm_trial_wise.py  task_stim.py
first-level/mask/: gm_mask.py
first-level/rsa/: feedback_model_rdm.py  feedback_neural_data.py  feedback_rsa.py
first-level/stat/: feedback_rsa_cluster_mask.py  feedback_rsa_ttest.py  univariate_ttest.py
first-level/utils/: nifti.py  parallel.py  path.py  searchlight.py  subject_exclusion.py  types.py
second-level/: 1_cross_validated_rsa_clusters.ipynb  2_visualization_of_rsa_clusters.ipynb  3_run_second_level_rsa.ipynb
