[tool.poetry]
name = "photographer_data_analysis"
version = "0.1.0"
description = ""
authors = ["Sangsoo Jin <swingwithblue@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.1"
nipype = "^1.8.6"
tqdm = "^4.65.0"
parmap = "^1.6.0"
loguru = "^0.7.0"
toml = "^0.10.2"
rsatoolbox = "^0.1.3"
torch = {version = "^2.2.1+cpu", source = "pytorch"}
torchvision = {version = "^0.17.1+cpu", source = "pytorch"}
opencv-python = "^4.9.0.80"
psutil = "^5.9.8"
pyyaml = "^6.0.1"
requests = "^2.31.0"
thop = "^0.1.1.post2209072238"
gitpython = "^3.1.42"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
